--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 
-  <h1>Привет 👋</h1>
-  <p>Это мой личный сайт</p>
+  <h1>LOLOL HACKED</h1>
+  <p>Noob</p>
 
   <!-- Звук по ссылке -->
   <audio id="sound" loop></audio>
@@ -16,3 +16,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
